[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Entities/Items/BaseItem.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheet_n.png" type="Texture" id=2]

[node name="BaseItem" type="Sprite"]
normal_map = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 269

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_started"]
